--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -4,5 +4,5 @@
 
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
-    <p>Phone book application <a asp-controller="Subscribers" asp-action="Index">Go to phone book</a>.</p>
+    <p>Phone book application <a asp-controller="Subscribers" asp-action="Index">Go to phone book.</a></p>
 </div>
